[metadata]
name = skydive-client
url = https://github.com/skydive-project/skydive
summary = Skydive Python client library
description-file = README.md
author = Sylvain Afchain
author-email = safchain@gmail.com
home-page = https://github.com/skydive-project/skydive
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
